--- a/split_labels.ipynb
+++ b/split_labels.ipynb
@@ -2,27 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from shutil import copyfile\n",
+    "from os\n",
     "np.random.seed(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_labels = pd.read_csv('anno/bus_labels.csv')"
+    "PATH_TO_FULL_ANNO = 'annotations/'\n",
+    "FULL_ANNO = 'bus_labels.csv'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_labels = pd.read_csv(os.path.join(PATH_TO_FULL_ANNO, FULL_ANNO))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -145,28 +157,6 @@
        "      <td>3175</td>\n",
        "      <td>1757</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>DSCF1016.JPG</td>\n",
-       "      <td>3648</td>\n",
-       "      <td>2736</td>\n",
-       "      <td>bus</td>\n",
-       "      <td>1067</td>\n",
-       "      <td>1843</td>\n",
-       "      <td>2181</td>\n",
-       "      <td>2456</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>DSCF1016.JPG</td>\n",
-       "      <td>3648</td>\n",
-       "      <td>2736</td>\n",
-       "      <td>bus</td>\n",
-       "      <td>1954</td>\n",
-       "      <td>1278</td>\n",
-       "      <td>2975</td>\n",
-       "      <td>1839</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -180,23 +170,21 @@
        "4  DSCF1013.JPG   3648    2736   bus  1879  1798  2365  2026\n",
        "5  DSCF1013.JPG   3648    2736   bus  2429  1742  2904  1970\n",
        "6  DSCF1015.JPG   3648    2736   bus   641  1342  1822  2234\n",
-       "7  DSCF1015.JPG   3648    2736   bus  2053  1022  3175  1757\n",
-       "8  DSCF1016.JPG   3648    2736   bus  1067  1843  2181  2456\n",
-       "9  DSCF1016.JPG   3648    2736   bus  1954  1278  2975  1839"
+       "7  DSCF1015.JPG   3648    2736   bus  2053  1022  3175  1757"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "full_labels.head(10)"
+    "full_labels.head(8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +207,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +252,7 @@
        "60"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,26 +263,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_index = np.random.choice(len(grouped_list), size=40, replace=False)\n",
+    "train_index = np.random.choice(len(grouped_list), size=54, replace=False)\n",
     "test_index = np.setdiff1d(list(range(60)), train_index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(40, 20)"
+       "(54, 6)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,27 +293,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# take first 200 files\n",
     "train = pd.concat([grouped_list[i] for i in train_index])\n",
     "test = pd.concat([grouped_list[i] for i in test_index])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(173, 44)"
+       "(94, 10)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,12 +333,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['DSCF1029.JPG',\n",
+       " 'DSCF1025.JPG',\n",
+       " 'DSCF1105.JPG',\n",
+       " 'DSCF1120.JPG',\n",
+       " 'DSCF1142.JPG',\n",
+       " 'DSCF1015.JPG']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(set(test['filename'].tolist()))"
+   ]
   }
  ],
  "metadata": {
